Some fixes concerning loading circle in background of transparent images & fallback of generating thumbnails of too small images

--- a/css/map.css
+++ b/css/map.css
@@ -205,11 +205,16 @@ noscript p
 	min-height: 32px;
 	min-width: 32px;
 	border: 1px solid black;
+	float: right;
+	margin-left: 10px;
+	background-color: white;
+}
+
+#loadingImage
+{
 	background-image: url(../img/loading.gif);
 	background-repeat: no-repeat;
 	background-position: center;
-	float: right;
-	margin-left: 10px;
 }
 
 #image:hover
@@ -734,9 +739,7 @@ noscript p
 {
 	max-width: 240px;
 	border: 1px solid black;
-	background-image: url(../img/loading.gif);
-	background-repeat: no-repeat;
-	background-position: center;
+	background-color: white;
 }
 
 #moreImage:hover
@@ -825,37 +828,12 @@ noscript p
 	border: 1px solid black;
 	z-index: 1000;
 	margin: auto;
-	background-image: url(../img/loading.gif);
-	background-repeat: no-repeat;
-	background-position: center;
+	background-color: white;
 }
 
 #fullscreenImg:hover
 {
 	cursor: pointer;
-}
-
-#fullscreenImg
-{
-	max-width: 100%;
-	max-height: 100%;
-	min-width: auto;
-	min-height: auto;
-	position: fixed;
-	left: 0px;
-	right: 0px;
-	top: 0px;
-	bottom: 0px;
-	-o-box-shadow: 0px 0px 7px #aaaaaa;
-	-webkit-box-shadow: 0px 0px 7px #aaaaaa;
-	-moz-box-shadow: 0px 0px 7px #aaaaaa;
-	box-shadow: 0px 0px 7px #aaaaaa;
-	border: 1px solid black;
-	z-index: 1000;
-	margin: auto;
-	background-image: url(../img/loading.gif);
-	background-repeat: no-repeat;
-	background-position: center;
 }
 
 /* single box of extended details */
